--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -6,7 +6,7 @@
                 <i class="fab fa-angellist"></i>
               </a>
              
-                <a href="/"><h7 class="indigo-text text-darken-4">NGONLAM</h7></a>
+                <a href="/"><h7 class="indigo-text text-darken-4">Medical Equipment</h7></a>
             
     
                 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons ">menu</i></a>
