--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -31,6 +31,11 @@ body {
 .content-container {
   margin-top: 150px;
 }
+.paper_container {
+  background-color: #fff;
+  padding: 10px 20px 30px 20px;
+  overflow: hidden;
+}
 .btn-home {
   border-radius: 30px;
   border: 1px solid #f57f17;
@@ -58,7 +63,21 @@ body {
   padding: 20px;
   height: 50px;
   width: 100%;
-  background-color: #e57373;
+  background: linear-gradient(to right, #a53394, #f76948);
+  border-bottom: 1px solid rgb(190, 190, 190);
+}
+.admin_footer {
+  background: linear-gradient(to right, #a53394, #f76948);
+  height: 50px;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 10;
+
+  bottom: 10px;
 }
 .icon-while {
   color: white;
@@ -70,6 +89,8 @@ body {
 /* Message Css*/
 .message-info {
   display: none;
+}
+.button-radius {
 }
 .isa_info,
 .isa_success,
@@ -101,4 +122,116 @@ body {
   margin: 10px 22px;
   font-size: 2em;
   vertical-align: middle;
+}
+.footer {
+  margin-top: 80px;
+}
+.icon-trash {
+  padding-left: 10px;
+  font-size: 20px;
+}
+.block_img {
+  margin: 20px 0;
+}
+.title_block {
+  margin: 40px 0;
+}
+.btn_login {
+  transform: translateY(-50px);
+  width: 100%;
+  border-radius: 20px;
+  background: linear-gradient(to right, #a53394, #f76948);
+  text-transform: capitalize;
+  font-size: 16px;
+}
+.inside_auth {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(234, 236, 238, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  height: 50%;
+}
+.inside_signup {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(234, 236, 238, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  max-height: 680px;
+}
+/* validation css */
+.card {
+  min-height: 82vh;
+}
+.form-group {
+  margin: 0 0;
+}
+.md-form {
+  margin: 16px 0;
+}
+.help-block.error {
+  margin-bottom: 5px;
+}
+.has-error label {
+  color: #ff3547 !important;
+}
+.has-error input.form-control {
+  border-bottom-color: #ff3547 !important;
+}
+nav {
+  position: fixed;
+}
+table {
+  margin-bottom: 20px;
+  margin-top: -30px;
+}
+.trash_page {
+  font-weight: bold;
+}
+.active_list {
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(170, 172, 175, 0.75);
+  border-radius: 0px 30px 30px 0px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+.admin_nav {
+  transform: translate(-10px, -4px);
+}
+.tabs {
+  background-color: transparent;
+}
+.admin_main {
+  background-color: #f2f4f8;
+}
+.auth_container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-image: url('https://pixinvent.com/materialize-material-design-admin-template/app-assets/images/gallery/flat-bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+}
+.text-purple {
+  color: #8e24aa;
+}
+.mr-top {
+  margin-top: -10px;
+}
+.mr-bottom {
+  margin-top: 20px;
+}
+.Banned {
+  color: rgb(238, 33, 5);
+}
+.Active {
+  color: rgb(18, 233, 18);
 }
