--- a/src/resources/views/admin/account_view.hbs
+++ b/src/resources/views/admin/account_view.hbs
@@ -1,46 +1,90 @@
 {{>header_admin}}
  
-<div class="create-container">
-    <div class="container">
-
-  <table class="centered responsive-table right highlight" >
+<div class="create-container admin_main">
+    <div class="container ">
+      <div class="title_block">
+      <h5 class=""> Account Management</h5>
+      
+      </div>
+ 
+ <a href="/account/trash" data-target="" class="sidenav-trigger btn-floating pulse cyan">
+     <i class="material-icons">delete</i>
+   
+    </a>
+           <h7 class="">({{counts}})</h7>
+ <div class="  paper_container z-depth-1">
+       {{>search}} 
+      <table class="centered responsive-table right highlight " >
         <thead>
           <tr>           
             <th>No</th>   
-            <th>Name</th>
-            <th>Email</th>
-            <th>Type</th>
+            <th>Name{{{sortable 'full_name' _sort}}}</th>
+            <th>Email{{{sortable 'email' _sort}}}</th>
+            <th>Role</th>
             <th>Status</th>
-              <th></th>
-              <th></th>
+            <th>Phone Number
+              {{{sortable 'phone_number' _sort}}}
+            </th>   
+            <th></th>
+            <th></th>
           </tr>
         </thead>
-
-        <tbody>
-     
+        <tbody id="myTable">
               {{#each accounts}}
-          <tr>
-            <td>{{sum @index}}</td>
-             <td>{{{this.full_name}}}</td>
-            <td>{{{this.email}}}</td>
-    
-            <td>{{{ accType this.accountType}}}</td>
-              <td>{{{ status this.account_status}}}</td>
-             <td><a href="/account/{{{this.account_status}}}/{{{this._id}}}" class="btn btn-small  blue lighten-2 ">{{btnStatus this.account_status}}</a></td>
+            <tr>
+                <td>{{sum @index}}</td>
+                <td>{{{this.full_name}}}</td>
+                <td>{{{this.email}}}</td>
+                <td class="{{{ accType this.accountType}}}">{{{ accType this.accountType}}}</td>
+                <td class="{{{ status this.account_status}}}">{{{ status this.account_status}}}</td>
+                <td>0{{{ this.phone_number}}}</td>      
+                <td>   
+                  <a href="/account/{{{this.account_status}}}/{{{this._id}}}" class="btn btn-small  blue lighten-2 "><i class="material-icons">{{btnStatus this.account_status}}</i></a>
+                  <a href="/account/{{{this._id}}}" class="btn btn-small  yellow darken-3 button-radius "><i class="material-icons">system_update_alt</i></a>
 
-             <td><a onclick="return confirm('Are You Sure Delete ?')" href="/account/{{{this._id}}}" class="btn btn-small red lighten-1 ">Delete</a> </td>
-          
-          </tr>
-            {{/each}}
-          
-
-      
-          
+                <!-- Modal Trigger -->
+                <a data-list="{{this.list_id}}" data-id="{{{this._id}}}" class="waves-effect waves-light btn modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
+                </td>
+                </tr>
+           
+             {{else}}
+                <tr>
+                  <td colspan="6" class="center text-center">
+                      Account Empty
+                  </td>
+                </tr>
+   
+            {{/each}}   
         </tbody>
-      </table> 
-    </div>
-  </div>
-
+         </table> 
+         
+  <!-- Modal Trigger -->
 
 
   
+  {{>pagination}}
+ {{>footer_admin}}
+ </div>
+       
+    </div>
+  </div>
+  <!-- Modal Structure -->
+               <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4 class="center">Delete Account</h4>
+      <p class="center">Do you really want to delete these records ?</p>
+    </div>
+    <div class="modal-footer">
+      <a class="modal-close waves-effect waves-green btn-flat delete-agree text-darken-2 red-text">Yes, do it</a>
+      <a class="modal-close waves-effect waves-green btn-flat  grey-text">No, cancel </a>
+    </div>
+  </div>    
+<script>
+ $(document).ready(function(){
+    $(".btn_delete").on("click", function(){
+        var dataId = $(this).attr("data-id");
+          $(".delete-agree").attr("href", "/account/delete/"+dataId); // Set herf value
+    });
+});
+</script>
