--- a/src/resources/views/admin/article_view.hbs
+++ b/src/resources/views/admin/article_view.hbs
@@ -9,17 +9,22 @@
       </ul>
     </div>
     <div id="addproduct" class="">
+      <div class="paper_container z-depth-1">
+
  <form class="col s12"  method="POST" action="/article/postNews" enctype="multipart/form-data">
       <div class="row">
         <div class="input-field col s12 ">
-          <input  id="title" type="text" class="validate" name="title">
+          <input  id="title" type="text" class="validate" name="title" required="required">
           <label for="title">Title</label>
+            <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
         </div>
       </div>
+        
       <div class="row">
         <div class="input-field col s12">
-          <textarea id="textarea1" class="materialize-textarea" name="content"></textarea>
+          <textarea id="textarea1" class="materialize-textarea" name="content"  class="validate" required="required"></textarea>
           <label for="textarea1">Content</label>
+           <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
         </div>
       </div>
       <div class="row">
@@ -37,49 +42,79 @@
     <i class="material-icons right">send</i>
       </button>
     </form> 
+      </div>
 
     </div>
     <div id="listproduct" class=""><br>
+    <div class="paper_container z-depth-1">
 
-    <table class="centered responsive-table right highlight" >
+    {{>search}}
+    <table class="centered responsive-table right highlight display_table">
         <thead>
           <tr>           
             <th>No</th>   
-            <th>Title</th>
+            <th>Title
+              {{{sortable 'title' _sort}}}
+            </th>
             <th>Image</th>
             <th>Status</th>
-            <th>Author</th>
+            <th>Author
+                 {{{sortable 'author' _sort}}}
+            </th>
+             <th>Created At
+                  {{{sortable 'createdAt' _sort}}}
+             </th>
             <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+        
           </tr>
-        </thead>
-
-        <tbody>
-     
+        </thead>    
+        <tbody id="myTable">  
               {{#each articles}}
           <tr>
             <td>{{sum @index}}</td>
              <td>{{{this.title}}}</td>
             <td><img src="../uploads/{{{this.image}}}" class="responsive-img list-img"></td>
-            <td>{{{ status this.article_status}}}</td>
+            <td class="{{{ status this.article_status}}}">{{{ status this.article_status}}}</td>
             <td>{{{ this.author}}}</td>   
-            <td><a href="" class="btn btn-small   blue-grey">Detail</a></td>
-            <td><a href="/article/{{{this.article_status}}}/{{{this._id}}}" class="btn btn-small  blue lighten-2 ">{{btnStatus this.article_status}}</a></td>
-            <td><a href="/article/{{this._id}}" class="btn btn-small yellow darken-3 ">Update</a> </td>
-             <td><a onclick="return confirm('Are You Sure Delete ?')" href="/article/delete/{{{this._id}}}" class="btn btn-small red lighten-1 ">Delete</a> </td>
+               <td>{{{convertDate this.createdAt}}}</td>   
+            <td>
+                <a href="" class="btn btn-small   blue-grey"><i class="material-icons">details</i></a>
+                <a href="/article/{{{this.article_status}}}/{{{this._id}}}" class="btn btn-small  blue lighten-2 "><i class="material-icons">{{btnStatus this.article_status}}</i></a>
+                <a href="/article/{{this._id}}" class="btn btn-small yellow darken-3 "><i class="material-icons">system_update_alt</i></a>    
+                 <a  data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
+            </td>
             </tr>
-            {{/each}}
-          
-
-      
-          
+              {{else}}
+                <tr>
+                  <td colspan="6" class="center text-center">
+                      Article Empty
+                  </td>
+                </tr>
+            {{/each}}    
         </tbody>
       </table> 
+            {{>pagination}}
+            {{>footer_admin}}
     </div>
-   
+    </div>
   </div>
-
 </div>
 </div>
+ <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4 class="center">Delete Article</h4>
+      <p class="center">Do you really want to delete these records ? This process cannot be undone</p>
+    </div>
+    <div class="modal-footer">
+      <a class="modal-close waves-effect waves-green btn-flat delete-agree text-darken-2 red-text">Yes, do it</a>
+      <a class="modal-close waves-effect waves-green btn-flat  grey-text">No, cancel </a>
+    </div>
+  </div>    
+<script>
+ $(document).ready(function(){
+    $(".btn_delete").on("click", function(){
+        var dataId = $(this).attr("data-id");
+          $(".delete-agree").attr("href", "/article/delete/"+dataId); // Set herf value
+    });
+});
+</script>
