--- a/src/resources/views/admin/product_manament.hbs
+++ b/src/resources/views/admin/product_manament.hbs
@@ -8,33 +8,36 @@
     <div class="col s12 push-l3">
       <ul class="tabs ">
         <li class="tab col s3"><a href="#addproduct">Add Product</a></li>
-        <li class="tab col s3"><a class="active" href="#listproduct">List Product</a></li>
+        <li class="tab col s3"><a class="active" href="#listproduct">Product Management</a></li>
       
       </ul>
     </div>
     <div id="addproduct" class="">
+      <div class="paper_container z-depth-1">
+
  <form class="col s12"  method="POST" action="/store/product" enctype="multipart/form-data">
       <div class="row">
         <div class="input-field col s12 ">
-          <input  id="product_name" type="text" class="validate" name="product_name">
-          <label for="product_name">Name</label>
+          <input  id="product_name" type="text" class="validate" name="product_name" required="required">
+          <label for="product_name">Name *</label>
+        <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
         </div>
       </div>
-    
       <div class="row">
         <div class="input-field col s12 ">
-          <input id="quantity" type="number" class="validate" name="quantity">
-          <label for="quantity">Quantity</label>
+          <input id="quantity" type="number" class="validate" name="quantity"  required="required"  min="1" max="10000">
+          <label for="quantity">Quantity *</label>
+           <span class="helper-text" data-error="This field must be greater than 0" data-success=""></span>
         </div>
       </div>
        <div class="row">
         <div class="input-field col s12 ">
-        <input id="cost"type="number" class="validate" name="unit_price"/>
-          <label for="cost">Price</label>
+        <input id="cost"type="number" class="validate" name="unit_price"  required="required" min="1" max="10000" />
+          <label for="cost">Price *</label>
+          <span class="helper-text" data-error="This field must be greater than 0" data-success=""></span>
         </div>
       </div>
       <div class="row">
-
              <div class="file-field input-field">
       <div class="btn">
         <span>File</span>
@@ -55,7 +58,7 @@
       <option value="{{{this._id}}}" >{{{this.list_name}}} </option>
       {{/each}}
     </select>
-    <label>Select</label>
+    <label>Select *</label>
       </div>
     </div>
       <div class="row">
@@ -68,26 +71,38 @@
     <i class="material-icons right">send</i>
       </button>
     </form> 
+      </div>
 
     </div>
     <div id="listproduct" class=""><br>
-  <table class="centered responsive-table right highlight" >
+      <div class="paper_container z-depth-1">
+
+      {{>search}}
+  <table class="centered responsive-table highlight " >
         <thead>
           <tr>   
               <th>No</th>    
-              <th>Name</th>
+              <th>Name
+                  {{{sortable 'product_name' _sort}}}
+              </th>
               <th>Image</th>
-              <th>Price</th>
-              <th>Quantity</th>
-              <th>Note</th>
+              <th>Price
+                  {{{sortable 'unit_price' _sort}}}
+              </th>
+              <th>Quantity
+                  {{{sortable 'quantity' _sort}}}
+              </th>
               <th>Status</th>
-              <th></th>
-              <th></th>
+              <th>Created At
+                  {{{sortable 'createdAt' _sort}}}
+              </th>
+         
+      
               <th></th>
           </tr>
         </thead>
 
-        <tbody>
+        <tbody id="myTable">
    
               {{#each products}}
           <tr>
@@ -96,19 +111,29 @@
             <td><img src="../uploads/{{{this.image}}}" alt="" class="responsive-img list-img"></td>
             <td>{{{this.unit_price}}}</td>
             <td>{{{this.quantity}}}</td>
-            <td>{{{this.note}}}</td>
-             <td>{{{ status this.product_status}}}</td>
-             <td><a href="/store/status/{{this.product_status}}/{{this._id}}" class="btn btn-small  blue lighten-2 ">{{btnStatus this.product_status}}</a></td>
-             <td><a href="/admin/{{this._id}}" class="btn btn-small  yellow darken-3 ">Update</a></td>
-             <td> <a href="/store/{{this.list_id}}/{{this._id}}" onclick="return confirm('Are You Sure Delete ?')" class="btn btn-small red lighten-1 ">Delete</a></td>
-          </tr>
-            {{/each}}
-          
 
-   
-          
+             <td class="{{{ status this.product_status}}}">{{{ status this.product_status}}}</td>
+              <td>{{{ convertDate this.createdAt}}}</td>
+             <td></td>
+             <td>   
+               <a href="/store/status/{{this.product_status}}/{{this._id}}" class="btn btn-small  blue lighten-2 button-radius "><i class="material-icons">{{btnStatus this.product_status}}</i></a>
+               <a href="/admin/{{this._id}}" class="btn btn-small  yellow darken-3 button-radius "><i class="material-icons">system_update_alt</i></a>
+              <a data-list="{{this.list_id}}" data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
+               </td>
+               
+             <td> </td>
+          </tr>  
+          {{else}}
+                <tr>
+                  <td colspan="6" class="center text-center">
+                      Product Empty
+                </tr>
+            {{/each}}    
         </tbody>
       </table>
+        {{>pagination}}
+           {{>footer_admin}}
+      </div>
 
     </div>
    
@@ -116,6 +141,25 @@
 
 </div>
 </div>
+ <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4 class="center">Delete Product</h4>
+      <p class="center">Do you really want to delete these records ? This process cannot be undone</p>
+    </div>
+    <div class="modal-footer">
+      <a class="modal-close waves-effect waves-green btn-flat delete-agree text-darken-2 red-text">Yes, do it</a>
+      <a class="modal-close waves-effect waves-green btn-flat  grey-text">No, cancel </a>
+    </div>
+  </div>    
+<script>
+ $(document).ready(function(){
+    $(".btn_delete").on("click", function(){
+        var dataId = $(this).attr("data-id");
+        var listId = $(this).attr("data-list");
+          $(".delete-agree").attr("href", "/store/"+listId+"/"+dataId); // Set herf value
+    });
+});
+</script>
 
 
   
