--- a/src/resources/views/auth/forgotPassword.hbs
+++ b/src/resources/views/auth/forgotPassword.hbs
@@ -1,10 +1,14 @@
-     {{>header}}
+<div class="auth_container">
 <div class="container ">
-    <h2 class="center"> Your Email</h2>
+  
 <div class="row">
+
+  <div class="col s12 m6 push-l3 z-depth-4 card-panel border-radius-6 login-card bg-opacity-8  inside_auth">
     <form class="col s12" action="/auth/sendAccount" method="POST">   
+       <h4 class="center"> Forgot Account</h4>
       <div class="row">
-        <div class="input-field col s12">
+        <div class="input-field col s10 m10 push-l1">
+             <i class="material-icons prefix">email</i>
           <input id="forgotEmail" type="email" class="validate"  name="forgotEmail">
           <label for="forgotEmail">Email</label>
         </div>
@@ -14,16 +18,19 @@
           <span>{{error}}</span> 
              </div> 
       <div class="row">
-               <div class="input-field col s6">
-                <button class="btn waves-effect waves-light" type="submit">Submit
+               <div class="input-field col s10 m10 push-l1 mr-bottom">
+                <button class="btn waves-effect waves-light btn_login" type="submit">Send Info
             <i class="material-icons right">send</i>
                  </button>
                </div>
-               <div class="input-field col s12 left">
-                   <h10>Back to login ? </h10>
-                   <a href="/auth">Login</a>
+               <div class="input-field col s10 left">
+  
+                   <a href="/auth" class="left text-purple"> Login</a>
             </div>
       </div>
     </form>
+  </div>
   </div>    
+</div>
+
 </div>
