modified footer_admin.hbs file
Signed-off-by: Nhan Dang <nhan.icdi@gmail.com>

--- a/src/resources/views/partials/footer_admin.hbs
+++ b/src/resources/views/partials/footer_admin.hbs
@@ -3,9 +3,9 @@
     <div class="">
       <div class="row">
         <div class="col s6 ">
-          <h7>© 2021 PIXINVENT All rights reserved.</h7>
+          <h7>© 2021 All rights reserved.</h7>
         </div>
         <div class="col s6  ">
-          <h7>Design and Developed by LucHa</h7>
+          <h7>Designed and Developed by Team 9 DTU</h7>
         </div>
   </footer>
