--- a/src/resources/views/admin/orderDetail_view.hbs
+++ b/src/resources/views/admin/orderDetail_view.hbs
@@ -26,7 +26,7 @@
           </tr>
         </thead>
         <tbody id="myTable">
-              {{#each orderDetails}}
+              {{#each ordersDetail}}
             <tr>
                 <td>{{sum @index}}</td>
                 <td>{{{this.product_name}}}</td>
