--- a/src/resources/views/admin/order_view.hbs
+++ b/src/resources/views/admin/order_view.hbs
@@ -39,7 +39,7 @@
               <td>{{{ convertDate this.createdAt}}}</td>
              <td></td>
              <td>
-                <a href="/order/detail/{{{this._id}}}" class="btn btn-small   blue-grey"><i class="material-icons">details</i></a>
+                <a href="/order/{{{this._id}}}" class="btn btn-small   blue-grey"><i class="material-icons">details</i></a>
                <a href="/order/status/{{this.order_status}}/{{this._id}}" class="btn btn-small  blue lighten-2 button-radius "><i class="material-icons">check</i></a>
                   <a  data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  modal-trigger btn_delete red" href="#modal1"><i class="material-icons">do_not_disturb_alt</i></a>
                </td>
