--- a/src/resources/views/partials/header_admin.hbs
+++ b/src/resources/views/partials/header_admin.hbs
@@ -33,7 +33,10 @@
       </div>
     </li>
     <div class="admin_nav">
-      <li class=""><a class="while_text" href="/admin"><i
+      <li><a href="/admin"><i
+            class="material-icons"
+          >pie_chart</i>Statistics</a></li>
+      <li class=""><a class="while_text" href="/admin/product"><i
             class="material-icons"
           >storage</i>Product management</a></li>
       <li class=""><a class="while_text" href="/admin/list"><i
@@ -52,9 +55,7 @@
       <li><a href="/admin/promotion"><i
             class="material-icons"
           >local_offer</i>Promotion management</a></li>
-      <li><a href="#!"><i
-            class="material-icons"
-          >pie_chart</i>Statistics</a></li>
+
       <li><a href="/auth/logout"><i
             class="material-icons"
           >assignment_return</i>Logout</a></li>
