--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -77,7 +77,7 @@ body {
   left: 0;
   z-index: 10;
 
-  bottom: 10px;
+  bottom: 4px;
 }
 .icon-while {
   color: white;
@@ -204,6 +204,11 @@ table {
 }
 .admin_main {
   background-color: #f2f4f8;
+  position: fixed;
+  top: 50px;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 .auth_container {
   width: 100%;
@@ -229,7 +234,7 @@ table {
 .mr-bottom {
   margin-top: 20px;
 }
-.Banned {
+.Block {
   color: rgb(238, 33, 5);
 }
 .Active {
@@ -244,4 +249,26 @@ table {
   -webkit-text-fill-color: inherit !important;
   -webkit-box-shadow: none;
   transition: background-color 5000s ease-in-out 0s;
+}
+/* css status order */
+.Cancel {
+  color: red;
+}
+.Ready {
+  color: #00b0ff;
+}
+.Done {
+  color: #73d378;
+}
+.Delivery {
+  color: #e0e020;
+}
+.flex-block {
+  display: flex;
+  justify-content: space-between;
+}
+.mid-img {
+}
+.Admin {
+  display: none;
 }
