--- a/src/resources/views/admin/account_update.hbs
+++ b/src/resources/views/admin/account_update.hbs
@@ -12,22 +12,29 @@
       </div>
           <input type="Number"  hidden name="account_status" value="{{accounts.account_status}}">
           <input type="Number"  hidden name="accountType" value="{{accounts.accountType}}">
-          <input type="email"  hidden name="email" value="{{accounts.email}}">
+         
     
-    
+          <div class="row">
+        <div class="input-field col s12 ">
+
+          <input id="email" type="email" class="validate" name="email" value="{{accounts.email}}" required="required">
+          <label for="email">Email</label>
+            <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+        </div>
+      </div>
     
       <div class="row">
         <div class="input-field col s12 ">
-          <input id="phone_number" type="tel" class="validate" name="phone_number" value="{{accounts.phone_number}}" required="required">
+          <input id="phone_number" type="tel" class="validate" name="phone_number" value="0{{accounts.phone_number}}" required="required">
           <label for="phone_number">Phone Number</label>
             <span class="helper-text" data-error="This field must be phone number" data-success=""></span>
         </div>
       </div>
        <div class="row">
         <div class="input-field col s12 ">
-          <input id="address" type="Text" class="validate" name="address" value="{{accounts.address}}" required="required">
+          <input id="address" type="Text" class="validate" name="address" value="{{accounts.address}}">
           <label for="address">Address</label>
-           <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+         
         </div>
       </div>
        <div class="row">
