--- a/src/resources/views/admin/account_view.hbs
+++ b/src/resources/views/admin/account_view.hbs
@@ -1,18 +1,90 @@
+
+ 
+  <!-- Modal Structure -->
+               <!-- Modal Structure -->
+
 {{>header_admin}}
  
-<div class="create-container admin_main">
-    <div class="container ">
-      <div class="title_block">
-      <h5 class=""> Account Management</h5>
+<div class="create-container">
+<div class=" container">
+      <div class="row">
+    <div class="col s12 push-l3">
+      <ul class="tabs ">
+        <li class="tab col s3"><a href="#addproduct">Add Account</a></li>
+        <li class="tab col s3"><a class="active" href="#listproduct">Account Management</a></li>
       
-      </div>
+      </ul>
+    </div>
+    <div id="addproduct" class="">
+      <div class="paper_container z-depth-1">
+
  
- <a href="/account/trash" data-target="" class="sidenav-trigger btn-floating pulse cyan">
+    <form class="col s12" action="/account/register" method="POST">
+    <h4 class="center">Create account</h4>
+      <div class="row">
+           <div class="input-field col s10 m10 push-l1">
+       
+          <input id="email" type="email" class="validate" name="email" required="required">
+          <label for="email">Email*</label>
+          <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+        </div>
+        <div class="input-field col s10 m10 push-l1">
+         
+          <input id="last_name" type="text" class="validate" name="full_name" required="required">
+          <label for="last_name">Full Name *</label>
+          <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+        </div>
+        </div>
+          <div class="row">
+        <div class="input-field col s10 m10 push-l1">
+     
+          <input id="phone_number" type="tel" class="validate" name="phone_number" required="required">
+          <label for="phone_number">Phone Number*</label>
+          <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+        </div>
+        </div>
+      <div class="row">
+        <div class="input-field col s10 m10 push-l1">
+        
+          <input id="password" type="password" class="validate" name="password" required="required" minlength="6" >
+          <label for="password">Password*</label>
+        <span class="helper-text" data-error="Password minimum 6 characters" data-success=""></span>
+        </div>
+      </div>
+       <div class="row">
+        <div class="input-field col s10 m10 push-l1">
+            
+          <input id="confirm_password" type="password" class="validate" required="required"  >
+          <label for="confirm_password">Confirm Password *</label>
+          <span class="helper-text" data-error="Passwords don't match" data-success=""></span>
+        </div>
+      </div>
+        <div class="isa_error message-info">
+                <i class="fa fa-times-circle"></i>
+          <span>{{error}}</span> 
+            </div>  
+      <div class="row">
+               <div class="input-field col s10 m10 push-l1 mr-bottom">
+                <button class="btn waves-effect waves-light " type="submit">Signup
+            <i class="material-icons right">send</i>
+                 </button>
+               </div>
+           
+      </div>
+    </form>
+      </div>
+
+    </div>
+    <div id="listproduct" class=""><br>
+      <div class="paper_container z-depth-1">
+
+     <a href="/account/trash" data-target="" class="sidenav-trigger btn-floating pulse cyan">
      <i class="material-icons">delete</i>
    
     </a>
+    
            <h7 class="">({{counts}})</h7>
- <div class="  paper_container z-depth-1">
+
        {{>search}} 
       <table class="centered responsive-table right highlight " >
         <thead>
@@ -35,7 +107,7 @@
                 <td>{{sum @index}}</td>
                 <td>{{{this.full_name}}}</td>
                 <td>{{{this.email}}}</td>
-                <td class="{{{ accType this.accountType}}}">{{{ accType this.accountType}}}</td>
+                <td class="">{{{ accType this.accountType}}}</td>
                 <td class="{{{ status this.account_status}}}">{{{ status this.account_status}}}</td>
                 <td>0{{{ this.phone_number}}}</td>      
                 <td>   
@@ -43,7 +115,7 @@
                   <a href="/account/{{{this._id}}}" class="btn btn-small  yellow darken-3 button-radius "><i class="material-icons">system_update_alt</i></a>
 
                 <!-- Modal Trigger -->
-                <a data-list="{{this.list_id}}" data-id="{{{this._id}}}" class="waves-effect waves-light btn modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
+                <a data-list="{{this.list_id}}" data-id="{{{this._id}}}" class="waves-effect waves-light btn modal-trigger btn_delete red  {{accType this.accountType}}" href="#modal1"><i class="material-icons">delete</i></a>
                 </td>
                 </tr>
            
@@ -63,13 +135,17 @@
 
   
   {{>pagination}}
- {{>footer_admin}}
- </div>
-       
+ 
+ 
+          
+      </div>
+
     </div>
+   
   </div>
-  <!-- Modal Structure -->
-               <!-- Modal Structure -->
+
+</div>
+</div>
   <div id="modal1" class="modal">
     <div class="modal-content">
       <h4 class="center">Delete Account</h4>
@@ -88,3 +164,20 @@
     });
 });
 </script>
+
+   <script>
+      var password = document.getElementById("password")
+      var confirm_password = document.getElementById("confirm_password");
+function validatePassword(){
+  if(password.value != confirm_password.value) {
+    confirm_password.setCustomValidity("Passwords don't match");
+  } else {
+    confirm_password.setCustomValidity('');
+  }
+}
+
+password.onchange = validatePassword;
+confirm_password.onkeyup = validatePassword;
+    </script>
+   {{>footer_admin}}
+
