--- a/src/resources/views/admin/orderDetail_view.hbs
+++ b/src/resources/views/admin/orderDetail_view.hbs
@@ -11,7 +11,7 @@
     </a>
        
  <div class="  paper_container z-depth-1">
-    
+     {{>search}} 
       <table class="centered responsive-table right highlight " >
         <thead>
           <tr>           
