fix product price limited and modified update product function in AdminController

--- a/src/resources/views/admin/product_manament.hbs
+++ b/src/resources/views/admin/product_manament.hbs
@@ -30,7 +30,7 @@
       </div>
        <div class="row">
         <div class="input-field col s12 ">
-        <input id="cost"type="number" class="validate" name="unit_price"  required="required" min="1" max="10000" />
+        <input id="cost"type="number" class="validate" name="unit_price"  required="required" min="1" />
           <label for="cost">Price *</label>
           <span class="helper-text" data-error="This field must be greater than 0" data-success=""></span>
         </div>
