--- a/src/resources/views/admin/product_manament.hbs
+++ b/src/resources/views/admin/product_manament.hbs
@@ -38,7 +38,7 @@
       <div class="row">
              <div class="file-field input-field">
       <div class="btn">
-        <span>File</span>
+        <span>Choose Image *</span>
         <input type="file" name="image">
       </div>
       <div class="file-path-wrapper">
@@ -83,9 +83,9 @@
               <th>Name
                   {{{sortable 'product_name' _sort}}}
               </th>
-              <th>List
+              {{!-- <th>List
                   {{{sortable 'list_name' _sort}}}
-              </th>
+              </th> --}}
               <th>Image</th>
               <th>Price
                   {{{sortable 'unit_price' _sort}}}
@@ -109,16 +109,16 @@
           <tr>
              <td>{{sum @index }}</td>
             <td>{{{this.product_name}}}</td>
-            <td>{{{this.list.list_name}}}</td>
+            {{!-- <td>{{{this.list.list_name}}}</td> --}}
             <td><img src="../uploads/{{{this.image}}}" alt="" class="responsive-img list-img"></td>
-            <td>{{{this.unit_price}}}</td>
+            <td class="product-unit-price">{{{this.unit_price}}}</td>
             <td>{{{this.quantity}}}</td>
              <td class="{{{ status this.product_status}}}">{{{ status this.product_status}}}</td>
               <td>{{{ convertDate this.createdAt}}}</td>
              <td></td>
              <td>   
-               <a href="/store/status/{{this.product_status}}/{{this._id}}" class="btn btn-small  blue lighten-2 button-radius "><i class="material-icons">{{btnStatus this.product_status}}</i></a>
-               <a href="/admin/{{this._id}}" class="btn btn-small  yellow darken-3 button-radius "><i class="material-icons">system_update_alt</i></a>
+               <a href="/store/status/{{this.product_status}}/{{this._id}}" class="btn btn-small  blue lighten-2 button-radius "><i class="material-icons">{{btnStatus this.product_status}}</i></a>&nbsp;
+               <a href="/admin/{{this._id}}" class="btn btn-small  yellow darken-3 button-radius "><i class="material-icons">system_update_alt</i></a>&nbsp;
               <a data-list="{{this.list_id}}" data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
                </td>
              <td> </td>
@@ -158,6 +158,7 @@
         var listId = $(this).attr("data-list");
           $(".delete-agree").attr("href", "/store/"+listId+"/"+dataId); // Set herf value
     });
+    
 });
 </script>
 
