--- a/src/resources/views/admin/error_view.hbs
+++ b/src/resources/views/admin/error_view.hbs
@@ -1,4 +1,4 @@
-{{>header_admin}}
+
  
 <div class="create-container admin_main">
     <div class="container ">
@@ -7,10 +7,15 @@
       
       </div>
  <div class="  paper_container z-depth-1">
-   
+     
+  <script>
+    document.write('<a class="sidenav-trigger btn-floating pulse cyan" href="' + document.referrer + '"> <i class="material-icons">arrow_back</i></a>');
+</script>
+  
       <table class="centered responsive-table right highlight " >
                 <h4 class="center">{{{message}}}</h4>
          </table> 
+         
          
   <!-- Modal Trigger -->
 
