--- a/src/resources/views/admin/product_manament.hbs
+++ b/src/resources/views/admin/product_manament.hbs
@@ -117,9 +117,9 @@
               <td>{{{ convertDate this.createdAt}}}</td>
              <td></td>
              <td>   
-               <a href="/store/status/{{this.product_status}}/{{this._id}}" class="btn btn-small  blue lighten-2 button-radius "><i class="material-icons">{{btnStatus this.product_status}}</i></a>&nbsp;
-               <a href="/admin/{{this._id}}" class="btn btn-small  yellow darken-3 button-radius "><i class="material-icons">system_update_alt</i></a>&nbsp;
-              <a data-list="{{this.list_id}}" data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
+               <a data-position="top" data-tooltip="Status" href="/store/status/{{this.product_status}}/{{this._id}}" class="btn btn-small  tooltipped  blue lighten-2 button-radius "><i class="material-icons">{{btnStatus this.product_status}}</i></a>&nbsp;
+               <a data-position="top" data-tooltip="Update" href="/admin/{{this._id}}" class="btn btn-small tooltipped  yellow darken-3 button-radius "><i class="material-icons">system_update_alt</i></a>&nbsp;
+              <a data-position="top" data-tooltip="Delete" data-list="{{this.list_id}}" data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small tooltipped   modal-trigger btn_delete red" href="#modal1"><i class="material-icons">delete</i></a>
                </td>
              <td> </td>
           </tr>  
